2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: No longer setting caret
	  position on right click on selection.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs: Changed combobox sizing
	  a bit.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed Bug 364192 - Right
	  click should place the caret before showing context menu.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Some changes for slight
	  change in the text editor interface.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added some safety checks.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed status bar - worked
	  on region combo.

2008-02-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Cosmetic fix.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Search error removed, when
	  pattern is empty

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: swapped search wrap
	  messages.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/GotoLineNumberWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Improved search (user
	  recognizes if pattern is not found). Set some status bar messages.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed Bug 363983 -
	  Tooltip does not hide when goto dialog shows.

2008-02-22  Mike Krüger <mkrueger@novell.com> 
